<resources>
    <string name="app_name">Urticaria Crónica</string>
    <string name="button_uas7">UAS 7</string>
    <string name="button_UCT">UCT</string>
    <string name="button_results">Resultados</string>
    <string name="answer1">0</string>
    <string name="answer2"><![CDATA[<20]]></string>
    <string name="answer3">20–50</string>
    <string name="answer4"><![CDATA[>50]]></string>
    <string name="ronchas">Número de ronchas</string>
    <string name="uas7">Urticaria Activity Score 7</string>
    <string name="button_save_uas7">Guardar</string>
    <string name="pain">Prurito</string>
    <string name="answer21">Ninguno</string>
    <string name="answer22">Leve</string>
    <string name="answer23">Moderado</string>
    <string name="answer24">Intenso</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_u_c_t_scale">ScrollingActivity</string>
    <string name="uct_exp">Instrucciones: Padece urticaria. Las siguientes preguntas deberán registrar la situación actual de su enfermedad. Por favor, lea detenidamente cada pregunta y elija una de las cinco respuestas que mejor se adapte a su situación. Deberá ceñirse a las últimas 4 semanas. La respuesta deberá ser instantánea, no meditada. Rogamos que contesten a todas las preguntas y que elijan para cada una de ellas únicamente una respuesta.</string>
    <string name="question1">"1. ¿Cuánto ha sufrido en las últimas 4 semanas los síntomas físicos de la Urticaria (picor, ronchas y/o hinchazón)? "</string>
    <string name="question2">2. ¿Se ha visto afectada su calidad de vida en las últimas 4 semanas debido a la Urticaria?</string>
    <string name="uct_tittle">Urticaria Control Test – Versión corta</string>
    <string name="button_save_uct">Guardar</string>
    <string name="question3">"3. ¿Con qué frecuencia en las últimas 4 semanas el tratamiento médico no ha sido suficiente para controlar los síntomas de la Urticaria? "</string>
    <string name="question4">4. Globalmente, indique como de bien controlada ha tenido su urticaria en las últimas 4 semanas</string>
    <string name="answer_uct1">Mucho</string>
    <string name="answer_uct2">Bastante</string>
    <string name="answer_uct3">Regular</string>
    <string name="answer_uct4">Poco</string>
    <string name="answer_uct5">Nada</string>
    <string name="title_activity_results">ScrollingActivity</string>
    <string name="button_show">Mostrar</string>
    <string name="uctSelector">UCT</string>
    <string name="uas7Selector">UAS7</string>
    <string name="selectResults">Seleccione el resultado que quiere ver</string>
    <string name="selectSamples">Seleccione el número de muestras que quiere ver</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="samplesHint">5</string>
    <string name="bienvenido">Bienvenido</string>
</resources>