<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UAS7_scale">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/uas7"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/ronchas"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/pain"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ronchasGroup" />

    <RadioGroup
        android:id="@+id/ronchasGroup"
        android:layout_width="360dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/answer10"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/answer1"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/answer11"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/answer2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/answer12"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/answer3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/answer13"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/answer4"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/pruritoGroup"
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/answer20"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/answer21"
            android:textAlignment="center"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/answer21"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/answer22"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/answer22"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:text="@string/answer23"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/answer23"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/answer24"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/save_button_uas7"
        android:layout_width="126dp"
        android:layout_height="65dp"
        android:layout_marginTop="56dp"
        android:text="@string/button_save_uas7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pruritoGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>